--- a/index.html
+++ b/index.html
@@ -54,25 +54,36 @@
 <div id="content">
 <div class="container">
     <h2 id="about-me">About Me</h2>
-<figure class="avatar"><img src="/avatar.jpg"
-         alt="avatar"/>
+<figure class="test"><img src="/binjia.jpg"
+         alt="personalpicture"/>
 </figure>
 
-<p>This is a Hugo based resume template. You can find the full source code on
-<a href="https://github.com/ojroques/hugo-researcher">GitHub</a>.</p>
-<h2 id="research-interest">Research Interest</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam finibus ipsum
-ac erat aliquam dapibus. Vestibulum vehicula placerat ex, a consectetur odio
-pharetra quis<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. Mauris id urna ante.</p>
-<p>Fusce pharetra diam ac nisi aliquet, velegestas ex iaculis. Pellentesque
-laoreet cursus tellus sed pellentesque. Praesent a rhoncus elit<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>. Nunc
-ipsum nisl, consequat sit amet pretium quis, gravida id ipsum.</p>
+<p>I am currently a second-year master&rsquo;s student in the Astronomy Department at Leiden Observatory. My primary interests lie in two specific areas: protoplanetary disks and the interstellar medium (ISM). Leiden Observatory mandates two theses for its master&rsquo;s program. For my first thesis, I was under the guidance of Dr. N. van der Marel, focusing on protoplanetary disks. This project primarily emphasized the observational aspect. Currently, I am working with Prof. Dr. S. Viti on the study of molecules within nearby galaxies.</p>
+<h2 id="research-eexperience">Research Eexperience</h2>
+<h3 id="the-effect-of-dust-trapping-on-the-depletion-of-co-in-warm-disks-thesishttpswwwdropboxcomsclfij4ebsh3ajo9xe7h5vh9fw2023_7_31_jia_firstthesispdfrlkeyrjmudb5mnkawc6s17d2o3sbdddl0">The effect of dust trapping on the depletion of CO in warm disks <a href="https://www.dropbox.com/scl/fi/j4ebsh3ajo9xe7h5vh9fw/2023_7_31_Jia_Firstthesis.pdf?rlkey=rjmudb5mnkawc6s17d2o3sbdd&amp;dl=0">Thesis</a></h3>
+<p>My first project mainly focus on to examine the behaviors of CO isotopologues both within and beyond CO snowline. The figure below shows the effects of dust transport in disks for different types of disks.Grain growth, settling and vertical mixing drain volatiles from the outer disk atmosphere and lock them in grains in the midplane leading to changes in C/O depending on the relative location of snowline and pressure bump.</p>
+<figure class="scifigure"><img src="/NienkeCO.jpg"
+         alt="warmcolddisks"/>
+</figure>
+
+<div style="text-align: center;">
+Warm and cold transition disks. <a href="https://arxiv.org/pdf/2108.07679.pdf">van der Marel et al.(2021a)</a>.
+</div>
+<p>This thesis started from processing the raw data from ALMA Archive. In order to obtain high-quality CO data, the primary bands used in this study are ALMA Band 6 and 7, which could cover CO, C$^18$O and $^13$CO 2-1 or 3-2 transitions. Obtaining observation time with the ALMA has been highly competitive since its establishment, and only a limited number of programs, particularly focusing on transition disks, are accepted each year. Consequently, acquiring a suitable dataset that covers both CO isotopologues and transition disks was not an easy task. Fortunately, despite the difficulties, there are still 11 datasets that fulfill these specific requirements.</p>
+<figure class="scifigure"><img src="/continuum.jpg"
+         alt="continuum"/>
+</figure>
+
+<div style="text-align: center;">
+The continuum images of the selected disks in this <a href="https://www.dropbox.com/scl/fi/j4ebsh3ajo9xe7h5vh9fw/2023_7_31_Jia_Firstthesis.pdf?rlkey=rjmudb5mnkawc6s17d2o3sbdd&dl=0">theis</a>.
+</div>
+<p>In this thesis, I reconstruced the temperature profile using RADMC-3D, which enabled us to better constrain the locations of CO snowline. The figure below exhibts the locations of dust traps, CO snowline and CO column density tendency in MWC758.
+<figure class="scifigure"><img src="/mwc758_Temp.jpg"
+         alt="mwc758_temp"/>
+</figure>
+</p>
+<h3 id="tracing-hnco-as-a-shock-tracer-in-ngc1068">Tracing HNCO as a shock tracer in NGC1068</h3>
 <h2 id="publications">Publications</h2>
-<p>In chronological order:</p>
-<ol>
-<li>F.Bar, J.Doe: Effects of having a placeholder of a name</li>
-<li>S.Holmes, J.Watson: Consequences of living with a sociopath in London</li>
-</ol>
 <h2 id="typography">Typography</h2>
 <p>This is a <a href="http://google.com">link</a>. Something <em>italics</em> and something <strong>bold</strong>.</p>
 <p>Here is a table:</p>
@@ -116,17 +127,6 @@ ipsum nisl, consequat sit amet pretium quis, gravida id ipsum.</p>
 <li>Foo Bar: Head of Department, Placeholder Names, Lorem</li>
 <li>John Doe: Associate Professor, Department of Computer Science, Ipsum</li>
 </ul>
-<div class="footnotes" role="doc-endnotes">
-<hr>
-<ol>
-<li id="fn:1">
-<p>This is the first footnote.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
-</li>
-<li id="fn:2">
-<p>This is the second footnote.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
-</li>
-</ol>
-</div>
 
 </div>
 
