--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 <div id="content">
 <div class="container">
     <h2 id="about-me">About Me</h2>
-<figure class="test"><img src="/binjia.jpg"
+<figure class="test"><img src="/binjia.JPG"
          alt="personalpicture"/>
 </figure>
 
-<p>I am currently a second-year master&rsquo;s student in the Astronomy Department at Leiden Observatory. My primary interests lie in two specific areas: protoplanetary disks and the interstellar medium (ISM). Leiden Observatory mandates two theses for its master&rsquo;s program. For my first thesis, I was under the guidance of Dr. N. van der Marel, focusing on protoplanetary disks. This project primarily emphasized the observational aspect. Currently, I am working with Prof. Dr. S. Viti on the study of molecules within nearby galaxies.</p>
+<p>I am abd currently a second-year master&rsquo;s student in the Astronomy Department at Leiden Observatory. My primary interests lie in two specific areas: protoplanetary disks and the interstellar medium (ISM). Leiden Observatory mandates two theses for its master&rsquo;s program. For my first thesis, I was under the guidance of Dr. N. van der Marel, focusing on protoplanetary disks. This project primarily emphasized the observational aspect. Currently, I am working with Prof. Dr. S. Viti on the study of molecules within nearby galaxies.</p>
 <h2 id="research-eexperience">Research Eexperience</h2>
 <h3 id="the-effect-of-dust-trapping-on-the-depletion-of-co-in-warm-disks-thesishttpswwwdropboxcomsclfij4ebsh3ajo9xe7h5vh9fw2023_7_31_jia_firstthesispdfrlkeyrjmudb5mnkawc6s17d2o3sbdddl0">The effect of dust trapping on the depletion of CO in warm disks <a href="https://www.dropbox.com/scl/fi/j4ebsh3ajo9xe7h5vh9fw/2023_7_31_Jia_Firstthesis.pdf?rlkey=rjmudb5mnkawc6s17d2o3sbdd&amp;dl=0">Thesis</a></h3>
 <p>My first project mainly focus on to examine the behaviors of CO isotopologues both within and beyond CO snowline. The figure below shows the effects of dust transport in disks for different types of disks.Grain growth, settling and vertical mixing drain volatiles from the outer disk atmosphere and lock them in grains in the midplane leading to changes in C/O depending on the relative location of snowline and pressure bump.</p>
