--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@
          alt="personalpicture"/>
 </figure>
 
-<p>I am abd currently a second-year master&rsquo;s student in the Astronomy Department at Leiden Observatory. My primary interests lie in two specific areas: protoplanetary disks and the interstellar medium (ISM). Leiden Observatory mandates two theses for its master&rsquo;s program. For my first thesis, I was under the guidance of Dr. N. van der Marel, focusing on protoplanetary disks. This project primarily emphasized the observational aspect. Currently, I am working with Prof. Dr. S. Viti on the study of molecules within nearby galaxies.</p>
+<p>I am currently a second-year master&rsquo;s student in the Astronomy Department at Leiden Observatory. My primary interests lie in two specific areas: protoplanetary disks and the interstellar medium (ISM). Leiden Observatory mandates two theses for its master&rsquo;s program. For my first thesis, I was under the guidance of Dr. N. van der Marel, focusing on protoplanetary disks. This project primarily emphasized the observational aspect. Currently, I am working with Prof. Dr. S. Viti on the study of molecules within nearby galaxies.</p>
 <h2 id="research-eexperience">Research Eexperience</h2>
+<ul>
+<li>
 <h3 id="the-effect-of-dust-trapping-on-the-depletion-of-co-in-warm-disks-thesishttpswwwdropboxcomsclfij4ebsh3ajo9xe7h5vh9fw2023_7_31_jia_firstthesispdfrlkeyrjmudb5mnkawc6s17d2o3sbdddl0">The effect of dust trapping on the depletion of CO in warm disks <a href="https://www.dropbox.com/scl/fi/j4ebsh3ajo9xe7h5vh9fw/2023_7_31_Jia_Firstthesis.pdf?rlkey=rjmudb5mnkawc6s17d2o3sbdd&amp;dl=0">Thesis</a></h3>
+</li>
+</ul>
 <p>My first project mainly focus on to examine the behaviors of CO isotopologues both within and beyond CO snowline. The figure below shows the effects of dust transport in disks for different types of disks.Grain growth, settling and vertical mixing drain volatiles from the outer disk atmosphere and lock them in grains in the midplane leading to changes in C/O depending on the relative location of snowline and pressure bump.</p>
-<figure class="scifigure"><img src="/NienkeCO.jpg"
+<figure class="scifigure"><img src="/NienkeCO.JPG"
          alt="warmcolddisks"/>
 </figure>
 
@@ -70,7 +74,7 @@
 Warm and cold transition disks. <a href="https://arxiv.org/pdf/2108.07679.pdf">van der Marel et al.(2021a)</a>.
 </div>
 <p>This thesis started from processing the raw data from ALMA Archive. In order to obtain high-quality CO data, the primary bands used in this study are ALMA Band 6 and 7, which could cover CO, C$^18$O and $^13$CO 2-1 or 3-2 transitions. Obtaining observation time with the ALMA has been highly competitive since its establishment, and only a limited number of programs, particularly focusing on transition disks, are accepted each year. Consequently, acquiring a suitable dataset that covers both CO isotopologues and transition disks was not an easy task. Fortunately, despite the difficulties, there are still 11 datasets that fulfill these specific requirements.</p>
-<figure class="scifigure"><img src="/continuum.jpg"
+<figure class="scifigure"><img src="/continuum.JPG"
          alt="continuum"/>
 </figure>
 
@@ -78,11 +82,11 @@ Warm and cold transition disks. <a href="https://arxiv.org/pdf/2108.07679.pdf">v
 The continuum images of the selected disks in this <a href="https://www.dropbox.com/scl/fi/j4ebsh3ajo9xe7h5vh9fw/2023_7_31_Jia_Firstthesis.pdf?rlkey=rjmudb5mnkawc6s17d2o3sbdd&dl=0">theis</a>.
 </div>
 <p>In this thesis, I reconstruced the temperature profile using RADMC-3D, which enabled us to better constrain the locations of CO snowline. The figure below exhibts the locations of dust traps, CO snowline and CO column density tendency in MWC758.
-<figure class="scifigure"><img src="/mwc758_Temp.jpg"
+<figure class="scifigure"><img src="/mwc758_Temp.JPG"
          alt="mwc758_temp"/>
 </figure>
 </p>
-<h3 id="tracing-hnco-as-a-shock-tracer-in-ngc1068">Tracing HNCO as a shock tracer in NGC1068</h3>
+<h3 id="--tracing-hnco-as-a-shock-tracer-in-ngc1068">- Tracing HNCO as a shock tracer in NGC1068</h3>
 <h2 id="publications">Publications</h2>
 <h2 id="typography">Typography</h2>
 <p>This is a <a href="http://google.com">link</a>. Something <em>italics</em> and something <strong>bold</strong>.</p>
