--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 <div style="text-align: center;">
 Warm and cold transition disks. <a href="https://arxiv.org/pdf/2108.07679.pdf">van der Marel et al.(2021a)</a>.
 </div>
-<p>This thesis started from processing the raw data from ALMA Archive. In order to obtain high-quality CO data, the primary bands used in this study are ALMA Band 6 and 7, which could cover CO, C$^18$O and $^13$CO 2-1 or 3-2 transitions. Obtaining observation time with the ALMA has been highly competitive since its establishment, and only a limited number of programs, particularly focusing on transition disks, are accepted each year. Consequently, acquiring a suitable dataset that covers both CO isotopologues and transition disks was not an easy task. Fortunately, despite the difficulties, there are still 11 datasets that fulfill these specific requirements.</p>
+<p><br></br>
+This thesis started from processing the raw data from ALMA Archive. In order to obtain high-quality CO data, the primary bands used in this study are ALMA Band 6 and 7, which could cover CO, C$^18$O and $^13$CO 2-1 or 3-2 transitions. Obtaining observation time with the ALMA has been highly competitive since its establishment, and only a limited number of programs, particularly focusing on transition disks, are accepted each year. Consequently, acquiring a suitable dataset that covers both CO isotopologues and transition disks was not an easy task. Fortunately, despite the difficulties, there are still 11 datasets that fulfill these specific requirements.</p>
 <figure class="scifigure"><img src="/continuum.JPG"
          alt="continuum"/>
 </figure>
@@ -81,12 +82,41 @@ Warm and cold transition disks. <a href="https://arxiv.org/pdf/2108.07679.pdf">v
 <div style="text-align: center;">
 The continuum images of the selected disks in this <a href="https://www.dropbox.com/scl/fi/j4ebsh3ajo9xe7h5vh9fw/2023_7_31_Jia_Firstthesis.pdf?rlkey=rjmudb5mnkawc6s17d2o3sbdd&dl=0">theis</a>.
 </div>
-<p>In this thesis, I reconstruced the temperature profile using RADMC-3D, which enabled us to better constrain the locations of CO snowline. The figure below exhibts the locations of dust traps, CO snowline and CO column density tendency in MWC758.
+<br></br>
+In this thesis, I reconstruced the temperature profile using RADMC-3D, which enabled us to better constrain the locations of CO snowline. The figure below exhibts the locations of dust traps, CO snowline and CO column density tendency in MWC758.
 <figure class="scifigure"><img src="/mwc758_Temp.JPG"
          alt="mwc758_temp"/>
 </figure>
+
+<br></br>
+<h3 id="--tracing-hnco-as-a-shock-tracer-in-ngc1068-b-jia-et-al-2024-in-prep">- Tracing HNCO as a shock tracer in NGC1068 <em>(B, Jia et al. 2024 in prep)</em></h3>
+<p>HNCO is assumed to be a tracer of slow shock (~10 km/s). In this thesis, I focused on star burst ring in NGC 1068, a composite galaxy hosting an AGN and star burst rings.
+<figure class="ngc1068"><img src="/ngc1068.jpg"
+         alt="ngc1068"/>
+</figure>
 </p>
-<h3 id="--tracing-hnco-as-a-shock-tracer-in-ngc1068">- Tracing HNCO as a shock tracer in NGC1068</h3>
+<div style="text-align: center;">
+Region selection in NGC 1068.
+</div>
+<br></br>
+<p>Non-LTE analysis was used in this work, and we used <a href="https://spectralradex.readthedocs.io/en/latest/tutorials/radex.html">RADEX</a> as well as <a href="https://github.com/JohannesBuchner/UltraNest">UltraNest</a> to run the complex parameter inference procedures.
+<figure class="R1"><img src="/R1.png"
+         alt="non-lte"/>
+</figure>
+</p>
+<div style="text-align: center;">
+Bayesian inference of gas properties using non-LTE model.
+</div>
+<br></br>
+<p><a href="https://uclchem.github.io/docs/">UCLCHEM</a> was used to model the history of gas as observation can only show us what is happening at that moment. We ran large grids analysis to discover possible scenario.
+<figure class="scifigure"><img src="/uclchem.png"
+         alt="non-lte"/>
+</figure>
+</p>
+<div style="text-align: center;">
+Fractional abundance of HNCO in gas, grain surface and bulk.
+</div>
+<br></br>
 <h2 id="publications">Publications</h2>
 <h2 id="typography">Typography</h2>
 <p>This is a <a href="http://google.com">link</a>. Something <em>italics</em> and something <strong>bold</strong>.</p>
