--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ In this thesis, I reconstruced the temperature profile using RADMC-3D, which ena
 <br></br>
 <h3 id="--tracing-hnco-as-a-shock-tracer-in-ngc1068-b-jia-et-al-2024-in-prep">- Tracing HNCO as a shock tracer in NGC1068 <em>(B, Jia et al. 2024 in prep)</em></h3>
 <p>HNCO is assumed to be a tracer of slow shock (~10 km/s). In this thesis, I focused on star burst ring in NGC 1068, a composite galaxy hosting an AGN and star burst rings.
-<figure class="ngc1068"><img src="/ngc1068.jpg"
+<figure class="ngc1068"><img src="/NGC1068.jpg"
          alt="ngc1068"/>
 </figure>
 </p>
