--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 Warm and cold transition disks. <a href="https://arxiv.org/pdf/2108.07679.pdf">van der Marel et al.(2021a)</a>.
 </div>
 <p><br></br>
-This thesis started from processing the raw data from ALMA Archive. In order to obtain high-quality CO data, the primary bands used in this study are ALMA Band 6 and 7, which could cover CO, C$^18$O and $^13$CO 2-1 or 3-2 transitions. Obtaining observation time with the ALMA has been highly competitive since its establishment, and only a limited number of programs, particularly focusing on transition disks, are accepted each year. Consequently, acquiring a suitable dataset that covers both CO isotopologues and transition disks was not an easy task. Fortunately, despite the difficulties, there are still 11 datasets that fulfill these specific requirements.</p>
+This thesis started from processing the raw data from ALMA Archive. The figure below shows the continuum images of the selected targets in this work.</p>
 <figure class="scifigure"><img src="/continuum.JPG"
          alt="continuum"/>
 </figure>
@@ -116,7 +116,7 @@ Bayesian inference of gas properties using non-LTE model.
 </figure>
 </p>
 <div style="text-align: center;">
-Fractional abundance of HNCO in gas, grain surface and bulk.
+Fractional abundance of HNCO in gas, grain surface and bulk through a slow shock.
 </div>
 <br></br>
 <h2 id="publications">Publications</h2>
